--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,32 +4,32 @@
     "description": "Send Push Notification to Gotify Server.",
     "icons": [
 		{
-			"src": "icons/Icon-48.png",
+			"src": "assets/icons/Icon-48.png",
 			"sizes": "48x48",
 			"type": "image/png"
 		},
 		{
-			"src": "icons/Icon-72.png",
+			"src": "assets/icons/Icon-72.png",
 			"sizes": "72x72",
 			"type": "image/png"
 		},
 		{
-			"src": "icons/Icon-96.png",
+			"src": "assets/icons/Icon-96.png",
 			"sizes": "96x96",
 			"type": "image/png"
 		},
 		{
-			"src": "icons/Icon-144.png",
+			"src": "assets/icons/Icon-144.png",
 			"sizes": "144x144",
 			"type": "image/png"
 		},
 		{
-			"src": "icons/Icon-192.png",
+			"src": "assets/icons/Icon-192.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "icons/Icon-512.png",
+			"src": "assets/icons/Icon-512.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
