--- a/public/.htaccess
+++ b/public/.htaccess
@@ -55,6 +55,6 @@ ExpiresDefault "access 2 days"
 </IfModule>
 ## EXPIRES HEADER CACHING ##
 
-<Location /sw.js >
+<Directory /sw.js >
 Header set Cache-Control "no-cache"
-</Location>
+</Directory>
