--- a/public/.htaccess
+++ b/public/.htaccess
@@ -58,4 +58,6 @@ ExpiresDefault "access 2 days"
 <Files sw.js >
 Header unset ETag
 Header set Cache-Control "no-cache"
+Header set Pragma "no-cache"
+Header set Expires "Wed, 11 Jan 1984 05:00:00 GMT"
 </Files>
